--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
+csv_files
+*.dot
 .vscode
+.idea
+/*.txt
 astra-sim-alibabacloud/build/simai_analytical/build/
 astra-sim-alibabacloud/build/astra_ns3/build/
-astra-sim-alibabacloud/extern/
+astra-sim-alibabacloud/inputs/config/
+!astra-sim-alibabacloud/inputs/config/SimAI.conf
 bin/
 results/
 test/log/
 *.log
 .cur*
 .DS_Store
+*.iml
+
+**/build
+**/cmake-cache*
+!astra-sim-alibabacloud/build
+**/cmake-build*
+
+topologies/
